change name of picture

--- a/_posts/2022-04-21-Code.md
+++ b/_posts/2022-04-21-Code.md
@@ -9,4 +9,4 @@ updated: 2022-04-21
 
 ## Deep Learning
 1. Priyanka Dwivedi: https://github.com/priya-dwivedi/Deep-Learning
-![List](https://github.com/xzqyj/xzqyj.github.io/blob/master/image/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220421211728.png)
+![List](https://github.com/xzqyj/xzqyj.github.io/blob/master/image/list.png)
